# fastrpc

./: Dockerfile  README.md  client.js  main.py  manager.py  pyproject.toml  response.py
.github/workflows/: docker-push.yml
docker/: gunicorn_conf.py  requirements.txt  start-reload.sh
